feat: add nested list

--- a/src/app/json-viewer/json-viewer.component.html
+++ b/src/app/json-viewer/json-viewer.component.html
@@ -1,5 +1,5 @@
 <!-- <p>json-viewer works!</p> -->
-<pre class="json_viewer" id="json">{{datastringify}}</pre>
+<pre class="json_viewer" id="json">{{dataStringify}}</pre>
 <button (click)="copy()" *ngIf="hideCopy">
   <span class="material-symbols-outlined">
     file_copy
