--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,8 @@ p{
   display: flex;
   align-items: center;
   justify-content: center;
+  line-height: 23px;
+  font-size: 14px;
 }
 .editor_container_inner {
   width: 100%;
@@ -43,4 +45,39 @@ p{
   gap: 20px;
   margin: 0 auto;
   max-width: 1000px;
+}
+
+
+@media only screen and (max-width: 999px) and (min-width: 300px) {
+  .header_cont {
+    flex-wrap: wrap;
+    gap: 0px;
+  }
+	.editor_container {
+    h1 {
+      width: 100%;
+      text-align: center;
+      font-size: 21px;
+      font-weight: 900;
+    }
+    p {
+      width: 100%;
+      font-size: 14px;
+      text-align: center;
+      line-height: 21px;
+    }
+  }
+  .editor_container_inner {
+    flex-wrap: wrap;
+    .editor_cont {
+      width: 100%;
+      min-height: 30dvh;
+      padding-left: 20px;
+    }
+    .json_cont {
+      width: 100%;
+    }
+  }
+
+
 }
