--- a/src/app/json-viewer/json-viewer.component.scss
+++ b/src/app/json-viewer/json-viewer.component.scss
@@ -21,9 +21,15 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all .5s;
   span {
     font-size: 32px;
   }
+}
+
+button:hover {
+  background: #444676;
+  transition: all .5s;
 }
 .material-symbols-outlined {
   font-variation-settings:
