style: change description paragraph of  the home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,7 @@
   <div class="header_cont">
     <h1>Richtext to <br />Json converter.</h1>
     <p>
-      Rich Text to JSON converter streamlines content transformation by
-      parsing rich text inputs, organizing attributes like formatting styles and
-      multimedia, and converting them into structured JSON. This enables
-      seamless storage, manipulation, and integration into software
-      applications. The converter ensures fidelity and empowers developers to
-      handle rich text efficiently.
+      Rich Text to JSON converter automates the conversion of rich text content, including formatting and multimedia elements, into a structured JSON format. It simplifies content management by organizing attributes systematically, ensuring fidelity during integration into various software applications. The converter streamlines processes, offering developers efficient handling of rich text data.
     </p>
   </div>
   <div class="editor_container_inner">
