--- a/src/app/json-viewer/json-viewer.component.scss
+++ b/src/app/json-viewer/json-viewer.component.scss
@@ -22,6 +22,7 @@ button {
   align-items: center;
   justify-content: center;
   transition: all .5s;
+  z-index: 2;
   span {
     font-size: 32px;
   }
