ref: refractor validation service

--- a/src/app/json-viewer/json-viewer.component.html
+++ b/src/app/json-viewer/json-viewer.component.html
@@ -8,6 +8,6 @@
   {{dataStringify}}
 </pre>
 
-<button (click)="copy()" *ngIf="isCopyButtonVisible">
+<button (click)="copyJson()" *ngIf="isCopyButtonVisible">
   <span class="material-symbols-outlined"> file_copy </span>
 </button>
