feat: add banner image to editor js

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   </div>
   <div class="editor_container_inner">
     <div class="editor_cont">
+      <app-banner-editor></app-banner-editor>
       <app-basic-editor
         (generatedJsonDataFromEditor)="pushData($event)"
       ></app-basic-editor>
